--- a/blog-admin/public/sections.html
+++ b/blog-admin/public/sections.html
@@ -18,9 +18,9 @@
 <header><h1>栏目管理（Sections Manager）</h1>
   <div class="actions">
     <a href="index.html"><button>← 返回合体版</button></a>
-    <button id="btn-refresh">刷新</button>
+    <button id="btn-refresh" class="neutral">刷新</button>
     <button id="btn-nav-sync">同步导航</button>
-    <button id="btn-logout">退出登录</button>
+    <button id="btn-logout" class="neutral">退出登录</button>
   </div>
 </header>
 
