feat(admin): replace sections manager with categories manager

--- a/blog-admin/public/index.html
+++ b/blog-admin/public/index.html
@@ -17,7 +17,7 @@
 <div id="app-shell" class="app-shell">
 <header><h1>Blog Admin 合体版 v4</h1>
   <div class="actions">
-    <a href="sections.html"><button>栏目管理</button></a>
+    <a href="categories.html"><button>分类管理</button></a>
     <button id="btn-refresh" class="neutral">刷新列表</button>
     <button id="btn-build">构建</button>
     <button id="btn-preview" class="neutral">本地预览</button>
@@ -71,13 +71,6 @@
     <h2>已下架</h2>
     <table id="tbl-archived"><thead>
       <tr><th>标题</th><th>Slug</th><th>日期</th><th>标签</th><th>分类</th><th>操作</th></tr>
-    </thead><tbody></tbody></table>
-  </div>
-
-  <div class="card">
-    <h2>栏目 / 系列索引（识别 index.md）</h2>
-    <table id="tbl-sections"><thead>
-      <tr><th>标题</th><th>相对路径</th><th>发布</th><th>操作</th></tr>
     </thead><tbody></tbody></table>
   </div>
 
