fix(admin): let menu flag drive nav visibility

--- a/blog-admin/public/categories.html
+++ b/blog-admin/public/categories.html
@@ -47,6 +47,7 @@
         <option value="true" selected>是</option>
         <option value="false">否</option>
       </select>
+      <small class="muted">仅决定导航是否显示，该选项与“内容上架”已解耦。</small>
     </label>
     <label>菜单排序（数字，越小越靠前）
       <input id="new-order" type="number" min="0" placeholder="自动追加">
