--- a/blog-admin/public/index.html
+++ b/blog-admin/public/index.html
@@ -40,9 +40,9 @@
     <label>标题 <input id="title" placeholder="文章标题"></label>
     <label>摘要 <input id="desc" placeholder="可选摘要"></label>
     <label>标签 <input id="tags" placeholder="前端,经验"></label>
-    <label>栏目
-      <select id="column" data-placeholder="选择栏目">
-        <option value="">选择栏目</option>
+    <label>分类
+      <select id="column" data-placeholder="选择分类">
+        <option value="">选择分类</option>
       </select>
     </label>
     <label>分类补充（可选） <input id="cat" placeholder="自定义子分类"></label>
